# OOP

./: README.md
Lab5+6/: CMakeLists.txt  Elektroscooter.cpp  Elektroscooter.h  ScooterController.cpp  ScooterController.h  ScooterRepo.cpp  ScooterRepo.h  ScooterUI.cpp  ScooterUI.h  main.cpp  scooters.txt
Lab7/: Elektroscooter.h  Repository.cpp  ScooterController.cpp  ScooterController.h  ScooterUI.cpp  ScooterUI.h  ScooterUIWidgetAdmin.cpp  ScooterUIWidgetClient.cpp  ScooterUIWidgetClient.h  main.cpp
Lab7/lab7QT/: CMakeLists.txt  Elektroscooter.cpp  GUI.cpp  GUI.h  Repository.h  ScooterUIWidgetAdmin.h  scooters.csv  test.cpp
Labor2/: L2_Lacatus_Paul_Lucian_Problem1_money.cpp  L2_Lacatus_Paul_Lucian_Problem1_money.h  L2_Lacatus_Paul_Lucian_Problem1_money_test.cpp
Labor3/: CSV-Datei.txt  CSV-Out.txt  L3_Lacatus_Paul_DSM.h  L3_Lacatus_Paul_DSM_test.cpp  L3_Lacatus_Paul_Lucian_DSM.cpp
Labor4/: CMakeLists.txt  ControllerTests.cpp  ControllerTests.h  Fruit.cpp  Fruit.h  Repo.cpp  Repo.h  RepositoryTests.cpp  RepositoryTests.h  ShopController.cpp  ShopController.h  ShopUI.cpp  ShopUI.h  compile_run.bat.txt  shop.cpp
